--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   connectivity: ^3.0.6
   lottie: ^1.2.1
   image_picker: ^0.8.4+4
+  smooth_page_indicator: ^1.0.0+2
 
 #  firebase_core: ^1.8.0
 #  firebase_messaging: ^11.1.0
@@ -76,6 +77,7 @@ dev_dependencies:
 
 flutter_app_name:
   name: "HTI Library"
+  # run this in terminal flutter pub run flutter_app_name
 
 flutter_native_splash:
   image: assets/images/hti_logo_splsh.png
