--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   image_picker: ^0.8.4+4
   smooth_page_indicator: ^1.0.0+2
   awesome_dialog: ^2.1.2
+  syncfusion_flutter_calendar: ^19.4.47
 
 #  firebase_core: ^1.8.0
 #  firebase_messaging: ^11.1.0
