--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,12 @@ flutter:
           weight: 700
         - asset: assets/fonts/Cairo-Medium.ttf
           weight: 500
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
