--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   syncfusion_flutter_calendar: ^19.4.47
   intl: ^0.17.0
 
+  flutter_cached_pdfview: ^0.4.0-nullsafety
+
   #  firebase_core: ^1.8.0
   #  firebase_messaging: ^11.1.0
 
