--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   intl: ^0.17.0
 
   flutter_cached_pdfview: ^0.4.0-nullsafety
+  flutter_share: ^2.0.0
 
   #  firebase_core: ^1.8.0
   #  firebase_messaging: ^11.1.0
