--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_share: ^2.0.0
 
   local_auth: ^2.1.0
+  flutter_local_notifications: ^9.4.0
 
   #  firebase_core: ^1.8.0
   #  firebase_messaging: ^11.1.0
