--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   local_auth: ^2.1.0
   flutter_local_notifications: ^9.4.0
 
+  cached_network_image: ^3.2.0
+
   #  firebase_core: ^1.8.0
   #  firebase_messaging: ^11.1.0
 
