--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^7.2.0
-  flutter_bloc: ^7.3.0
+  flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   dartz: ^0.10.0
   http: ^0.13.3
@@ -38,15 +38,15 @@ dependencies:
   dio: ^4.0.0
   hexcolor: ^2.0.5
   carousel_slider: ^4.0.0
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.3
   html: ^0.15.0
-  font_awesome_flutter: ^9.2.0
+  font_awesome_flutter: ^10.1.0
   flutter_conditional_rendering: ^2.0.0
   flutter_rating_bar: ^4.0.0
-  percent_indicator: ^3.4.0
+  percent_indicator: ^4.2.2
   country_code_picker: ^2.0.2
   buildcondition: ^0.0.4
-  flutter_html: ^2.1.5
+  flutter_html: ^3.0.0-alpha.5
   fluttertoast: ^8.0.8
   url_launcher: ^6.0.6
   connectivity: ^3.0.6
@@ -54,16 +54,23 @@ dependencies:
   image_picker: ^0.8.4+4
   smooth_page_indicator: ^1.0.0+2
   awesome_dialog: ^2.1.2
-  syncfusion_flutter_calendar: ^19.4.47
+  syncfusion_flutter_calendar: ^20.1.59
   intl: ^0.17.0
 
   flutter_cached_pdfview: ^0.4.0-nullsafety
   flutter_share: ^2.0.0
 
   local_auth: ^2.1.0
-  flutter_local_notifications: ^9.4.0
+  flutter_local_notifications: ^10.0.0-dev.1
 
   cached_network_image: ^3.2.0
+  # Firebase
+  firebase_core: ^1.16.0
+  firebase_auth: ^3.3.17
+  firebase_storage: ^10.2.15
+  cloud_firestore: ^3.1.14
+  firebase_messaging: ^11.2.8
+
 
   #  firebase_core: ^1.8.0
   #  firebase_messaging: ^11.1.0
@@ -81,10 +88,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   flutter_app_name: ^0.1.1
   flutter_launcher_icons: ^0.9.2
-  flutter_native_splash: ^1.3.1
+  flutter_native_splash: ^2.2.0+1
 
 flutter_app_name:
   name: "HTI Library"
